# RetoV-Hackathon-AutomatedTesting

./: .gitignore  README.md  pyproject.toml  requirements.txt
.github/workflows/: ci.yml
features/: download_file.feature  environment.py  explore_pages.feature  upload_file.feature
features/steps/: __init__.py  download_steps.py  explore_steps.py  upload_steps.py
src/: config.py
src/pages/: base_page.py  download_page.py  explore_page.py  home_page.py  upload_page.py
src/utils/: file_helpers.py
steps/: download_steps.py  explore_steps.py  upload_steps.py
